pilot/pkg/security/authz/builder/testdata/http/dry-run-mix-out.yaml
name: envoy.filters.http.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
  rules:
    policies:
      ns[foo]-policy[httpbin-2]-rule[0]:
        permissions:
          - andRules:
              rules:
                - orRules:
                    rules:
                      - urlPath:
                          path:
                            exact: /another
        principals:
          - andIds:
              ids:
                - any: true
  shadowRules:
    policies:
      ns[foo]-policy[httpbin-1]-rule[0]:
        permissions:
          - andRules:
              rules:
                - orRules:
                    rules:
                      - urlPath:
                          path:
                            exact: /allow
        principals:
          - andIds:
              ids:
                - any: true
  shadowRulesStatPrefix: istio_dry_run_allow_
